--- a/src/assets/css/banner.css
+++ b/src/assets/css/banner.css
@@ -19,6 +19,7 @@
 }
 .baneritemtexts {
   display: flex;
+  direction: rtl;
   flex-direction: column;
   align-items: center;
   margin-left: 70%;
@@ -27,13 +28,18 @@
 .myfooter {
   margin: 0;
   padding: 0;
-  height: 380px;
-  top: 160%;
+  height: 250px;
   left: 0;
-  background-color: rgb(21, 22, 22);
+  margin-top: 40%;
+  bottom: 0;
+  background-color: rgb(0, 0, 0);
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+.myfooter {
+  background-color: rgb(21, 22, 22);
+  margin-top: 20%;
 }
 .fotertop {
   display: flex;
@@ -42,6 +48,7 @@
 }
 .text-uppercase {
   font-size: 20px;
+  margin-top: 20px;
 }
 
 .ban {
@@ -49,14 +56,36 @@
   border-radius: 10px;
   height: 320px;
 }
+.myfooterparent {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 .ban button {
+  background-color: rgb(29, 29, 31);
   color: rgb(255, 255, 255);
   font-size: 50px;
   opacity: 1;
 }
 .foterlinksparent {
+  border-bottom-style: solid;
+  border-bottom-color: rgb(255, 255, 255);
+  border-bottom-width: 2px;
+  border-radius: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.list-unstyled {
+  border: 0 0 1px 0 white solid;
   display: flex;
   flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
 @media only screen and (max-width: 1000px) {
   .baneritemtexts {
@@ -65,7 +94,7 @@
 }
 @media only screen and (max-width: 800px) {
   .myfooter {
-    height: 600px;
+    margin-top: 50%;
   }
   .foterlinksparent {
     display: flex;
@@ -78,7 +107,7 @@
     flex-direction: column;
     align-items: center;
   }
-  .baneritem{
+  .baneritem {
     height: 650px;
   }
   .ban {
@@ -86,18 +115,18 @@
     background-color: rgb(29, 29, 31);
   }
   .yalda {
-    height: 300PX;
+    height: 300px;
     width: 300px;
     margin-left: 0;
   }
   .headphone {
     margin-left: 0;
-    height: 300PX;
+    height: 300px;
     width: 300px;
   }
   .pic3 {
     margin-left: 0;
-    height: 300PX;
+    height: 300px;
     width: 300px;
   }
   .baneritemtexts {
