--- a/src/assets/css/box.css
+++ b/src/assets/css/box.css
@@ -1,9 +1,18 @@
 .box {
   display: flex;
-  width: 60%;
-  margin-left: 20%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
   margin-top: 50px;
   border-radius: 10px;
+}
+.boxitem{
+  width: 65%;
+  height: 400px;
+  margin: 5px;
+}
+.boxitem img{
+  height: 250px;
 }
 .box1 {
   margin: 10px;
