--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -118,17 +118,49 @@ h2::after {
   margin-right: 20%;
   margin-top: 10px;
 }
+.sizes span:hover {
+  color: #000000;
+  background-color: white;
+  border-radius: 5px;
+}
+.searchicon:hover {
+  color: #000000;
+  border-radius: 3px;
+  transition: 0.3s;
+}
 .prev {
   color: white;
-  margin-left: 2%;
+  width: 30px;
   position: absolute;
   margin-top: 300px;
+  height: 50px;
+  margin-left: 1.5%;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+.prev:hover {
+  background-color: white;
+  color: black;
 }
 .next {
   color: white;
   position: absolute;
+  width: 30px;
   margin-top: 300px;
+  height: 50px;
   margin-left: 91%;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+.next:hover {
+  background-color: white;
+  color: black;
 }
 .carousel-control-prev,
 .carousel-control-next {
@@ -163,8 +195,8 @@ h2::after {
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  /* margin-right: 20px; */
 }
+
 .carousel-control-prev i {
   margin-left: -2px;
 }
