--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -1,23 +1,27 @@
 body {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
-
-.myfooter {
-  background-color: rgb(21, 22, 22);
-  margin-top: 10%;
+.deletespin{
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 .foot-link {
   text-decoration: none;
-  color: rgb(6, 129, 211);
+  color: rgb(255, 255, 255);
 }
 .footer-copyright {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 20px;
 }
 .footerright {
   margin-right: 50px;
@@ -36,14 +40,16 @@ body {
   align-items: center;
   justify-content: center;
 }
+.icon{
+  margin-left: 10px;
+}
 .foterlinks li,
 .foot-link {
   list-style-type: none;
   text-decoration: none;
-  margin-top: 5px;
 }
 .foot-link:hover {
-  color: white;
+  color: rgb(182, 182, 182);
 }
 .footer {
   position: relative;
@@ -156,7 +162,8 @@ body {
   align-items: center;
   text-decoration: none;
   color: white;
-  background-color: red;
+  background-color: rgb(0, 0, 0);
+  color: red;
 }
 .personpic {
   font-size: 80px;
@@ -176,9 +183,7 @@ body {
   color: red;
 }
 @media only screen and (min-height: 1000px) {
-  .myfooter {
-    margin-top: 40%;
-  }
+  
 }
 @media only screen and (max-width: 1000px) {
   .profileparent {
