--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -15,7 +15,7 @@
   right: 10px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content:flex-start;
 }
 .navmid {
   direction: rtl;
@@ -44,7 +44,8 @@
   display: inline-block;
   color: rgb(250, 249, 249);
   margin-right: 20px;
-  margin-top: 5px;
+  margin-top: 7px;
+  margin-right: 40px;
   text-decoration: none;
 }
 .navshop {
@@ -70,7 +71,8 @@
 .shop {
   font-size: 20px;
 }
-.logout {
+.logout p{
+  color: red;
 }
 .proflink {
   color: white;
@@ -109,8 +111,8 @@
 }
 .login {
   font-size: 20px;
-  color: rgb(3, 3, 3);
-  background-color: white;
+  color: rgb(255, 255, 255);
+  background-color: rgb(7, 7, 7);
   text-decoration: none;
   width: 80px;
   height: 30px;
