--- a/src/assets/css/shop.css
+++ b/src/assets/css/shop.css
@@ -139,7 +139,7 @@
 }
 .shopminibox {
   background-color: #000000;
-  height: 200px;
+  height: 250px;
   direction: rtl;
   width: 100%;
   margin: 20px;
@@ -206,7 +206,8 @@
 }
 @media only screen and (max-width: 800px) {
   .pedarshop {
-    margin-top: 400px;
+    margin-top:450px;
+    height: auto;
   }
 }
 @media only screen and (max-width: 600px) {
